# session-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  TODO.md  launch_session.sh  pyproject.toml  requirements-dev.txt  requirements.txt  session-cli  session-ctl  setup.py  test_connection.py
session_controller/: __init__.py  cdp.py  cli.py  constants.py  database.py  repl.py
session_controller/cli/: __init__.py
session_controller/templates/: __init__.py  export.html
session_mcp/: __init__.py  __main__.py  server.py
session_mcp/tools/: __init__.py  actions.py  conversations.py  export.py  messages.py  requests.py  stats.py  utility.py
tests/: __init__.py  conftest.py
