[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "session-controller"
version = "1.5.0"
description = "Python CLI tool and library for programmatic control of Session Desktop"
long_description = {file = "README.md"}
long_description_content_type = "text/markdown"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Session Controller Contributors"}
]
keywords = ["session", "messenger", "desktop", "cli", "cdp", "sqlcipher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "sqlcipher3>=0.5.0",
    "pynacl>=1.5.0",
    "websocket-client>=1.0.0",
    "pyaes>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
session-cli = "session_controller.cli:main"

[project.urls]
Homepage = "https://github.com/amanverasia/session-cli"
Documentation = "https://github.com/amanverasia/session-cli#readme"
Repository = "https://github.com/amanverasia/session-cli"
"Bug Reports" = "https://github.com/amanverasia/session-cli/issues"
"Source" = "https://github.com/amanverasia/session-cli"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
